# LinCode

./: .clang-format  .gitignore  CMakeLists.txt  LCequivalence  LICENSE  README.md  sd2
finite_field/: CMakeLists.txt  test_projective_space
finite_field/include/: field.hh  field_element.hh  field_vector.hh  hyperplane.hh  modular_arith.hh  polynomial_arith.hh  projective_point.hh  projective_space.hh  typedefs.hh
finite_field/src/: field.cc  field_element.cc  field_vector.cc  hyperplane.cc  modular_arith.cc  polynomial_arith.cc  projective_point.cc  projective_space.cc
finite_field/tests/: test_field.cc  test_projectif_space.cc
include/: code_extension.hh  constraints_phase1.hh  constructed_codes_table.hh  equivalence_code.hh  field.hh  field_vector.hh  hyperplane.hh  linear_code.hh  phase0.hh  projective_point.hh  utils.hh
src/: code_equivalence.cc  code_extension.cc  constraints_phase1.cc  constructed_codes_table.cc  field.cc  field_element.cc  hyperplane.cc  linear_code.cc  main.cc  phase0.cc  to_check.cc
